@@ -4210,8 +4210,6 @@ public:
 
     An event being sent when the frame is iconized (minimized) or restored.
 
-    Currently only wxMSW and wxGTK generate such events.
-
     @onlyfor{wxmsw,wxgtk}
 
     @beginEventTable{wxIconizeEvent}
